chandeliers-lus/tests/fail/ui/tc/builtin/float-out.rs
chandeliers_lus::decl! {
    node main() returns ();
    var x, y : float;
    let
        (x, y) = float(1);
    tel
}

fn main() {}
