chandeliers-lus/tests/fail/ui/tc/builtin/float-out.stderr
error: Expected a tuple (float, float), got a scalar float
 --> tests/fail/ui/tc/builtin/float-out.rs:5:18
  |
5 |         (x, y) = float(1);
  |                  ^^^^^^^^
